force-app/main/default/objects/Sponsor__c/fields/Active_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Active_Sponsor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Sponsor</label>
    <type>Checkbox</type>
</CustomField>