force-app/main/default/objects/Sponsor__c/fields/Sponsor_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Level__c</fullName>
    <label>Sponsor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
                <default>true</default>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>