force-app/main/default/objects/Sponsor__c/validationRules/Sponsorship_Amount_Greater_Than_10000.validationRule-meta.xml
<ValidationRule>
    <fullName>Sponsorship_Amount_Greater_Than_10000</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   Sponsorship_Amount__c &lt; 10000
)</errorConditionFormula>
    <errorDisplayField>Sponsorship_Amount__c</errorDisplayField>
    <errorMessage>Sponsorship Amount must be at least 10,000.</errorMessage>
</ValidationRule>